Change profile image source to empty
Updated profile image source to an empty string.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <!-- Profile Image -->
         <div class="profile-section">
-            <img src="https://via.placeholder.com/300x300/4A90E2/ffffff?text=Your+Photo" alt="Profile Picture" class="profile-image">
+            <img src="" alt="Profile Picture" class="profile-image">
         </div>
 
         <!-- Introduction (200+ words) -->
