Add profile image to index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <!-- Profile Image -->
         <div class="profile-section">
-            <img src="" alt="Profile Picture" class="profile-image">
+            <img src="pfp.jpeg" alt="Profile Picture" class="profile-image">
         </div>
 
         <!-- Introduction (200+ words) -->
