--- a/interests.html
+++ b/interests.html
@@ -23,7 +23,7 @@
         
         <!-- Interest Image -->
         <div class="interest-image-section">
-            <img src="https://via.placeholder.com/600x400/E25D4A/ffffff?text=My+Interests" alt="My Interests" class="interest-image">
+            <img src="./interests.jpg" alt="My Interests" class="interest-image">
         </div>
 
         <!-- Descriptive Text (200+ words) -->
