--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
             <h2>Get in Touch</h2>
             <p>I'd love to connect with you! Reach out through any of these platforms:</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-link">✉️ Email Me</a>
-                <a href="https://linkedin.com/in/yourprofile" class="contact-link" target="_blank">💼 LinkedIn</a>
-                <a href="https://github.com/yourusername" class="contact-link" target="_blank">💻 GitHub</a>
-                <a href="https://twitter.com/yourusername" class="contact-link" target="_blank">🐦 Twitter</a>
+                <a href="mailto:tasmak1806@gmail.com" class="contact-link">✉️ Email Me</a>
+                <a href="https://linkedin.com/in/tasmak" class="contact-link" target="_blank">💼 LinkedIn</a>
+                <a href="https://github.com/tazmak" class="contact-link" target="_blank">💻 GitHub</a>
             </div>
         </section>
     </main>
